java version fix - StartupChoiceFragment complete - ui design for fragments and first activity done

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -3,14 +3,17 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility JavaVersion.VERSION_19
+    targetCompatibility JavaVersion.VERSION_19
 }
 
 dependencies {
     implementation project(':common')
+    implementation project(path: ':server')
     implementation "io.jsonwebtoken:jjwt-api:0.11.5"
     implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
     implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"
-    implementation project(path: ':server')
+    implementation "com.google.code.gson:gson:2.10.1"
+    implementation "org.apache.commons:commons-lang3:3.12.0"
+
 }
