--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,8 +1,16 @@
+
 plugins {
     id 'java-library'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility JavaVersion.VERSION_19
+    targetCompatibility JavaVersion.VERSION_19
+}
+
+dependencies {
+    implementation "io.jsonwebtoken:jjwt-api:0.11.5"
+    implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
+    implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"
+    implementation "com.google.code.gson:gson:2.10.1"
 }
