--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
     implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"
     implementation "com.google.code.gson:gson:2.10.1"
+    implementation "com.sun.net.httpserver:http:20070405"
 }
